# kismet_home

./: CNAME  DEVELOPER.md  README.md  requirements.txt  setup.cfg
RaspBerryPiWirelessSecurity/: README.md  Wireless security using Raspberry PI 4, Kismet and Aircrack-ng.md  Wireless security using Raspberry PI 4, Kismet and Python.md
kismet_home/: __init__.py  config.py  kismet.py  tui.py
scripts/: kismet_home_alerts.py  kismet_home_config.py
test/: alert_definitions.json  alerts_example.json  config.ini  test_integration_kismet.py  unit_test_config.py
