[metadata]
name = kismet_home
version = 0.0.1
author = Jose Vicente Nunez Zuleta
Author-email = kodegeek.com@protonmail.com
License = Apache 2.0
Summary = Front end for common operations on a Kismet home installation
Home-page = https://github.com/josevnz/kismet_home

[options]
packages = kismet_home
setup_requires =
    setuptools>=60.2.0
    wheel>=0.37.1
    build>=0.7.0
    requests==2.27.1
    pip-audit==2.0.0
install_requires =
    importlib; python_version == "3.9"
    requests==2.27.1
    rich==11.2.0
scripts =
    scripts/kismet_home_alerts.py
    scripts/kismet_home_config.py